[tool.poetry]
name = "test-services"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
requests = "^2.26.0"
pydantic = "^1.8.2"
Faker = "^8.10.3"
datamodel-code-generator = "^0.11.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
poethepoet = "^0.10.0"
ipykernel = "^6.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
